# tools

./: README.md
cs667/: a4.html  letters.txt  xor.cpp
cs667/feedback/: Makefile  Makefile.am  Makefile.in  config.cache  config.h  config.status  configure  configure.in  feedback.kdevprj  mkinstalldirs
cs667/iris/: Assignment 4.txt  a.out  fisher.c  fisher.h  fisher.net  iris.net  iris.pat  iris_data.txt  iris_fields.txt  iris_pattern.pat  parse  parse.cpp  test.pat  train.pat  valid.pat
cs667/mlp/: AUTHORS  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  mlp.kdevprj  mlp.lsm
cs667/pb/: Assignment 5.sdw  Assignment 5.txt  a.out  pattern.cpp  pb.c  pb.h  pb.net  (+5 more)
cs667/perceptron/: ChangeLog  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  mkinstalldirs  perceptron.kdevprj  perceptron.lsm
cs667/perceptron/CVS/: Entries
cs667/perceptron/perceptron/: .kdbgrc.perceptron  Makefile  Makefile.am  Makefile.in  gdb-transcript  main.cpp  perceptron
cs667/perceptron/perceptron/.deps/: main.P
cs667/perceptron/perceptron/CVS/: Entries  Repository
cs667/perceptron/perceptron/docs/: Makefile  Makefile.in
cs667/perceptron/perceptron/docs/CVS/: Entries  Repository
cs667/perceptron/perceptron/docs/en/: Makefile  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
cs667/perceptron/perceptron/docs/en/CVS/: Entries  Repository
cs667/perceptron/perceptron/templates/CVS/: Entries  Repository
exif/: date.py  exif.sh  fuji.py
(+30 files in other folders)
