####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = perceptron 

EXTRA_DIST = perceptron.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO perceptron.lsm 

install-data-local:
	$(mkinstalldirs) 
	$(INSTALL_DATA) AUTHORS AUTHORS
	$(mkinstalldirs) 
	$(INSTALL_DATA) COPYING COPYING
	$(mkinstalldirs) 
	$(INSTALL_DATA) ChangeLog ChangeLog
	$(mkinstalldirs) 
	$(INSTALL_DATA) INSTALL INSTALL
	$(mkinstalldirs) 
	$(INSTALL_DATA) README README
	$(mkinstalldirs) 
	$(INSTALL_DATA) TODO TODO

uninstall-local:
	-rm -f AUTHORS
	-rm -f COPYING
	-rm -f ChangeLog
	-rm -f INSTALL
	-rm -f README
	-rm -f TODO

####### kdevelop will overwrite this part!!! (end)############
AUTOMAKE_OPTIONS = foreign
